public/stylesheets/main.css
/****************************/
/********** HEADER **********/
/****************************/

body {
    margin: 0;
    font-family: 'Roboto';
}

nav {
    padding: 0 15px;
    background: rgba(0,0,0,0.5);
}

nav ul {
    vertical-align: bottom;
    list-style: none;
    margin: 0;
    padding: 0;
    display: inline-block;
}

.right {
    float: right;
}

nav li {
    float: left;
    padding: 20px 10px;
}

nav a {
    text-decoration: none;
    color: lightgrey;
    display: inline-block;
    font-weight: bold;
    transition: border 0.2s linear;
    border-bottom: 2px solid rgba(0,0,0,0);
}

nav li:hover > a {
    border-bottom: 2px solid #f0f0f0;
}

.drop-menu {
    position: absolute;
    margin-top: 20px;
}

.drop-item {
    position: relative;
    background: rgba(0,0,0,0.75);
    padding: 10px;
    display: none;
    transition: all 0.2s linear;
}

.drop-item:hover {
    color: white;
    background: rgba(0,0,0,0.9);
}

nav li:hover .drop-item {
    display: block;
}



/****************************/
/********** FOOTER **********/
/****************************/

footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 60px;
    background: #cccccc;
}

footer .img-src {
    display: none;
}



/**************************/
/********** MAIN **********/
/**************************/
body {
    background: url(https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=1050&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D);
    background-size: cover;
    background-repeat: no-repeat;
}

main {
    background: white;
    width: 100%;
    height: 50vh;
    position: absolute;
    bottom: 0;
}

main h1 { 
    font-family: Arial;
    margin: 0;
    text-transform: uppercase;
    text-align: center;
    font-weight: 700;
    color: transparent;
    font-size: 8em;
}

main h1 span { 
    background: url(https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=1050&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D);
    background-position: center;
    background-size: cover;
    -webkit-text-fill-color: transparent;
    -webkit-background-clip: text;
    display: block;
}

main ~ footer .img-src, .certs ~ footer .img-src {
    display: inline-block;
    position: relative;
    top: 50%;
    left: 20px;
    transform: translate(0, -50%);
}



/**********************************/
/********** CERTIFICATES **********/
/**********************************/

.certs img {
    width: 50%;
    margin: 20px auto;
    display: block;
}

.certs ~ footer {
    position: static;
}



/********************************** PROJECTS **********************************/



/*********************************/
/********** TIC TAC TOE **********/
/*********************************/

.tictactoe {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100vh;
  z-index: -1;
  font-family: Verdana;
  background: #f0f0f0;
}

.tictactoe h1 {
  margin-top: 60px;
  text-align: center;
}

.tictactoe table {
  margin: auto;
  border: hidden;
  border-collapse: collapse;
}

.tictactoe td {
  height: 100px;
  width: 100px;
  text-align: center;
  font-size: 5em;
  border: 2px solid black;
}

.tictactoe .container {
  width: 200px;
  margin: 20px auto;
}

.tictactoe .marker {
  float: left;
  box-sizing: border-box;
  border: 2px solid rgba(0,0,0,0);
  border-radius: 5px;
  background: #cccccc;
  font-size: 1.5em;
  font-weight: bold;
  text-align: center;
  line-height: 1.5em;
  width: 46%;
  margin: 0 2%;
}

.tictactoe #reset {
  display: inline-block;
  margin: 10% 2%;
  width: 96%;
  line-height: 1.5em;
  background: #55ff88;
  text-align: center;
  font-size: 1.5em;
  border-radius: 5px;
}

.tictactoe .marker:hover, .tictactoe td:hover, .tictactoe #reset:hover {
  cursor: pointer;
}

.tictactoe .selected {
  border: 2px solid black;
}

.tictactoe .cats {
  background-image: url(https://lh4.googleusercontent.com/Ohk_fD8nDJqTurWSjLDwVZDILtwhbfISG_IQ0HnL3filnEnaypZYP4rZ5FHgJJpRSvhrghFAnFAjjkGgSBDIe741VGtgVgm7G-onzd3mw6DcU-JHJZyeDAPPemB_2lA-C_Zmllr2);
  background-size: cover;
}

.tictactoe .cats td {
  opacity: 0;
  border: hidden;
}

